Finish up the large desktop version of the site with some font weight heading correction on the heading on tablet version

--- a/src/scss/button-styles.scss
+++ b/src/scss/button-styles.scss
@@ -20,6 +20,7 @@
     border-radius: 10px;
     text-decoration: none;
     text-align: center;
+    display: block;
 }
 
 @mixin base-btn-blur($blur, $shadowColor) {
